--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -26,3 +26,115 @@ sqlparse==0.4.2
 Werkzeug==2.1.1
 WTForms==3.0.1
 zipp==3.8.0
+alembic==1.11.1
+altair==5.0.1
+asttokens==2.2.1
+attrs==23.1.0
+backcall==0.2.0
+bcrypt==3.2.0
+bidict==0.22.1
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.2
+colorama==0.4.6
+comm==0.1.3
+contourpy==1.1.0
+cycler==0.11.0
+debugpy==1.6.7
+decorator==5.1.1
+executing==1.2.0
+Flask==2.1.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.0
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.4
+Flask-SocketIO==5.3.5
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+fonttools==4.40.0
+gitdb==4.0.10
+GitPython==3.1.31
+greenlet==2.0.2
+idna==3.3
+importlib-metadata==4.11.3
+ipykernel==6.23.2
+ipython==8.14.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.1
+joblib==1.2.0
+jsonschema==4.17.3
+jupyter_client==8.2.0
+jupyter_core==5.3.1
+kiwisolver==1.4.4
+Mako==1.2.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+nest-asyncio==1.5.6
+nltk==3.8.1
+numpy==1.24.3
+oauthlib==3.2.2
+packaging==23.1
+pandas==2.0.2
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.5.0
+platformdirs==3.5.3
+prompt-toolkit==3.0.38
+protobuf==4.23.3
+psutil==5.9.5
+pure-eval==0.2.2
+pyarrow==12.0.1
+pycparser==2.21
+pydeck==0.8.1b0
+Pygments==2.15.1
+PyJWT==2.8.0
+Pympler==1.0.1
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+python-engineio==4.5.1
+python-socketio==5.8.0
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+pywin32==306
+pyzmq==25.1.0
+regex==2023.6.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+rich==13.4.2
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+smmap==5.0.0
+SQLAlchemy==1.4.35
+sqlparse==0.4.2
+stack-data==0.6.2
+streamlit==1.23.1
+tenacity==8.2.2
+textblob==0.17.1
+threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.2
+tqdm==4.65.0
+traitlets==5.9.0
+tweepy==4.14.0
+typing_extensions==4.6.3
+tzdata==2023.3
+tzlocal==4.3
+urllib3==2.0.3
+validators==0.20.0
+watchdog==3.0.0
+wcwidth==0.2.6
+Werkzeug==2.1.1
+WTForm==1.0
+WTForms==3.0.1
+xgboost==1.7.5
+zipp==3.8.0
