--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,5 @@
-alembic==1.11.1
-altair==5.0.1
+alembic
+altair
 asttokens==2.2.1
 attrs==23.1.0
 backcall==0.2.0
@@ -13,7 +13,7 @@ charset-normalizer==3.1.0
 click==8.1.2
 colorama==0.4.6
 comm==0.1.3
-contourpy==1.1.0
+contourpy
 cycler==0.11.0
 debugpy==1.6.7
 decorator==5.1.1
